Crossapi routes start

--- a/nest-app/.env
+++ b/nest-app/.env
@@ -2,3 +2,5 @@ DATABASE_TYPE=postgres
 DATABASE_USER=postgres
 DATABASE_PASSWORD=postgres
 DATABASE_NAME=breakdb
+ANALYSIS_URL=http://178.170.192.87:8003
+DATABASE_HOST=178.170.192.87
