--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,9 +39,9 @@ services:
       - ./python:/app/
     working_dir: /app
     command:
-      bash -c "pip install -r ./dependencies
-      && cd app 
-      && gunicorn -k uvicorn.workers.UvicornWorker main:app -b 0.0.0.0:80"
+      bash -c "pip install -r ./dependencies &&
+      cd app &&
+      gunicorn -k uvicorn.workers.UvicornWorker main:app -b 0.0.0.0:80"
     ports:
       - 8003:80
 
