--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,9 +34,14 @@ services:
     links:
       - "postgres:database"
   py:
-    build: ./python   
+    image: python
+    volumes: 
+      - ./python:/app/
+    working_dir: /app
+    command:
+      bash -c "pip install -r ./dependencies &&
+      cd app && 
+      gunicorn -k uvicorn.workers.UvicornWorker main:app -b :80"
     ports:
       - 8003:80
-    volumes:
-      - ./python/app:/app
 
